Converted to use com.formkiq.gradle.java-base gradle plugin (#422)